# OMM-Samples

./: .args  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.xml  README.md
Shaders/: Composition.cs.hlsl  DlssAfter.cs.hlsl  DlssBefore.cs.hlsl  Final.cs.hlsl  MorphMeshUpdatePrimitives.cs.hlsl  MorphMeshUpdateVertices.cs.hlsl  Shaders.cfg  SharcHashCopy.cs.hlsl  SharcResolve.cs.hlsl  SharcUpdate.cs.hlsl  Taa.cs.hlsl  TraceOpaque.cs.hlsl  TraceTransparent.cs.hlsl
Shaders/Include/: RaytracingShared.hlsli  Shared.hlsli
Source/: OmmSample.hpp  SampleCommon.cpp
Source/Profiler/: NriProfiler.hpp
Source/VisibilityMasks/: OmmBakerIntegration.cpp  OmmBakerIntegration.h  OmmHelper.cpp  OmmHelper.h  OmmHelperD3D12.cpp  OmmHelperVK.cpp
